@@ -1,4 +1,8 @@
+* #4743: Fix self._preview conflict with screenshot for journal (morgs)
+
 11
+
+* new icon (morgs)
 
 10
 
